welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = 
{
	if(vacation)
	{
		for(i <- 1 to 5)
		{
			if(day == i)
				return "10:00"
		}
		if(day == 0 || day == 6)
			return "off"
	}
	else
	{
		for(i <- 1 to 5)
		{
			if(day == i)
				return "7:00"
		}
		if(day == 0 || day == 6)
			return "10:00"
	}
}
